--- a/chart_test.html
+++ b/chart_test.html
@@ -46,7 +46,7 @@ circle.hidden {
 
 </style>
 <body>
-<script src="//d3js.org/d3.v3.min.js"></script>
+<script href="d3js.org/d3.v3.min.js"></script>
 <script>
 
 var width = 960,
