--- a/chart_test.html
+++ b/chart_test.html
@@ -46,7 +46,7 @@ circle.hidden {
 
 </style>
 <body>
-<script href="d3js.org/d3.v3.min.js"></script>
+<script src="src/d3.v3.min.js"></script>
 <script>
 
 var width = 960,
@@ -72,14 +72,23 @@ var yAxis = d3.svg.axis()
 var color = d3.scale.category10();
 
 d3.csv("test.csv", function(error, data) {
+     data = [{"R": "74", "G": "85", "B": "123", "result": "skin"},
+            {"R": "74", "G": "76", "B": "30", "result": "non-skin"},
+            {"R": "30", "G": "27", "B": "23", "result": "non-skin"},
+            {"R": "121", "G": "121", "B": "121", "result": "non-skin"},
+            {"R": "181", "G": "178", "B": "133", "result": "non-skin"},
+            {"R": "121", "G": "151", "B": "102", "result": "non-skin"},
+            {"R": "103", "G": "141", "B": "199", "result": "skin"}]
+        var centroids = [{"R": "74", "G": "85", "B": "123", "result": "skin"}]
+    console.log(data[0])
   if (error) throw error;
 
   var domainByTrait = {},
-      traits = d3.keys(data[0]).filter(function(d) { return d !== "species"; }),
+      traits = d3.keys(data[0]).filter(function(d) { return d !== "result"; }),
       n = traits.length;
 
   traits.forEach(function(trait) {
-    domainByTrait[trait] = d3.extent(data, function(d) { return d[trait]; });
+    domainByTrait[trait] = d3.extent(data, function(d) { return +d[trait]; });
   });
 
   xAxis.tickSize(size * n);
@@ -147,7 +156,7 @@ d3.csv("test.csv", function(error, data) {
         .attr("cx", function(d) { return x(d[p.x]); })
         .attr("cy", function(d) { return y(d[p.y]); })
         .attr("r", 4)
-        .style("fill", function(d) { return color(d.species); });
+        .style("fill", function(d) { return color(d.result); });
   }
 
   var brushCell;
