add optional random_state parameter

--- a/chart_test.html
+++ b/chart_test.html
@@ -72,14 +72,14 @@ var yAxis = d3.svg.axis()
 var color = d3.scale.category10();
 
 d3.csv("test.csv", function(error, data) {
-     data = [{"R": "74", "G": "85", "B": "123", "result": "skin"},
-            {"R": "74", "G": "76", "B": "30", "result": "non-skin"},
-            {"R": "30", "G": "27", "B": "23", "result": "non-skin"},
-            {"R": "121", "G": "121", "B": "121", "result": "non-skin"},
-            {"R": "181", "G": "178", "B": "133", "result": "non-skin"},
-            {"R": "121", "G": "151", "B": "102", "result": "non-skin"},
-            {"R": "103", "G": "141", "B": "199", "result": "skin"}]
-        var centroids = [{"R": "74", "G": "85", "B": "123", "result": "skin"}]
+     // data = [{"R": "74", "G": "85", "B": "123", "result": "skin"},
+     //        {"R": "74", "G": "76", "B": "30", "result": "non-skin"},
+     //        {"R": "30", "G": "27", "B": "23", "result": "non-skin"},
+     //        {"R": "121", "G": "121", "B": "121", "result": "non-skin"},
+     //        {"R": "181", "G": "178", "B": "133", "result": "non-skin"},
+     //        {"R": "121", "G": "151", "B": "102", "result": "non-skin"},
+     //        {"R": "103", "G": "141", "B": "199", "result": "skin"}]
+     //    var centroids = [{"R": "74", "G": "85", "B": "123", "result": "skin"}]
     console.log(data[0])
   if (error) throw error;
 
